--- a/Notebooks/LGS_Lösen.ipynb
+++ b/Notebooks/LGS_Lösen.ipynb
@@ -3,9 +3,105 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5dcf963-7f3d-4ffe-bfba-c701a65c78d9",
+   "id": "69995bc4-b0fe-4577-9772-ba0377c6ad35",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Initialisierung\n",
+    "import numpy as np\n",
+    "import sympy as sym\n",
+    "import scipy.linalg as sp\n",
+    "\n",
+    "# eigene Funktionen\n",
+    "def eliminate(Aa_in, tolerance=np.finfo(float).eps*10., fix=False, verbos=0):\n",
+    "    # eliminates first row\n",
+    "    # assumes Aa is np.array, As.shape>(1,1)\n",
+    "    Aa = Aa_in\n",
+    "    Nn = len(Aa)\n",
+    "    # Mm = len(Aa[0,:])\n",
+    "    if (Nn < 2):\n",
+    "        return Aa\n",
+    "    else:\n",
+    "        if not fix:\n",
+    "            prof = np.argsort(np.abs(Aa_in[:, 0]))\n",
+    "            Aa = Aa[prof[::-1]]\n",
+    "        if np.abs(Aa[0, 0]) > tolerance:\n",
+    "            el = np.eye(Nn)\n",
+    "            el[0:Nn, 0] = -Aa[:, 0] / Aa[0, 0]\n",
+    "            el[0, 0] = 1.0 / Aa[0, 0]\n",
+    "            if (verbos > 50):\n",
+    "                print('Aa \\n', Aa)\n",
+    "                print('el \\n', el)\n",
+    "                print('pr \\n', np.matmul(el, Aa))\n",
+    "            return np.matmul(el, Aa)\n",
+    "        else:\n",
+    "            return Aa\n",
+    "\n",
+    "\n",
+    "def FirstNonZero(lis):\n",
+    "    return next((i for i, x in enumerate(lis) if x), len(lis)-1)\n",
+    "\n",
+    "\n",
+    "def SortRows(Aa):\n",
+    "    inx = np.array(list(map(FirstNonZero, Aa)))\n",
+    "    #print('inx: ',inx,inx.argsort())\n",
+    "    return Aa[inx.argsort()]\n",
+    "\n",
+    "\n",
+    "def mrref(Aa_in, verbos=0):\n",
+    "    Aa = Aa_in*1.0\n",
+    "    Nn = len(Aa)\n",
+    "    kklist = np.arange(0, Nn - 1)\n",
+    "    #print('kklist', kklist)\n",
+    "    for kk in kklist:\n",
+    "        Aa[kk:, kk:] = eliminate(Aa[kk:, kk:], verbos=verbos-1)\n",
+    "    Aa = SortRows(Aa)\n",
+    "    Aa = np.flipud(Aa)\n",
+    "    # for kk in kklist:\n",
+    "    for kkh in kklist:\n",
+    "        kk = FirstNonZero(Aa[kkh, :])\n",
+    "        Aa[kkh::, kk::] = eliminate(Aa[kkh::, kk::], fix=True, verbos=verbos-1)\n",
+    "    return np.flipud(Aa)\n",
+    "\n",
+    "\n",
+    "def mnull(Aa_in,leps=np.finfo(float).eps*10,verbos=0):\n",
+    "    Aa=mrref(Aa_in) \n",
+    "    Aa=Aa[list(map(np.linalg.norm,Aa  ))>leps] # extract non-zero linies\n",
+    "    mpiv=np.array(Aa[0]*0,dtype=bool)\n",
+    "    jj=0 # setup mask, indicating pivot-variables\n",
+    "    for ro in Aa>leps:\n",
+    "        for x in ro[jj:]:\n",
+    "            if x:\n",
+    "                mpiv[jj]=True\n",
+    "                jj=jj+1\n",
+    "                break\n",
+    "    \n",
+    "    jj=0 ; la=Aa[:,mpiv] ; veo=[]\n",
+    "    for jj in  np.argwhere(mpiv==False): \n",
+    "        ve=np.linalg.lstsq(la, -Aa[:,jj],rcond=None)[0]\n",
+    "        vel=np.zeros((len(mpiv)))\n",
+    "        vel[mpiv]=ve[:,0] ; vel[jj]=1\n",
+    "        veo.append(vel)\n",
+    " \n",
+    "    opt=np.array(veo).T\n",
+    "    if (verbos>10):\n",
+    "        print(Aa.shape,opt.shape)\n",
+    "        print('Test: ',np.matmul(Aa,opt))\n",
+    "    return opt "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d45a696f-d4ac-437d-960d-308bfd4a90f1",
+   "metadata": {},
+   "source": [
+    "# LGS_Lösen #"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8f49991-5d36-464e-b406-dc6fd9517664",
+   "metadata": {},
    "source": []
   }
  ],
