--- a/Notebooks/LGS_Lösen.ipynb
+++ b/Notebooks/LGS_Lösen.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "68f528aa-8214-4126-91ef-7cfdaf7616d8",
+   "metadata": {},
+   "source": [
+    "# NoteBook for solving LGS #"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "69995bc4-b0fe-4577-9772-ba0377c6ad35",
    "metadata": {},
    "outputs": [],
@@ -95,7 +103,9 @@
    "id": "d45a696f-d4ac-437d-960d-308bfd4a90f1",
    "metadata": {},
    "source": [
-    "# LGS_Lösen #"
+    "# LGS_Lösen: #\n",
+    "\n",
+    "(Foto)"
    ]
   },
   {
