added code for second case

--- a/Notebooks/LGS_Lösen.ipynb
+++ b/Notebooks/LGS_Lösen.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "078800c5-1c1c-4cd2-9e31-597111fab312",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.  0.  0. -4.]\n",
+      "Matrix nach GAUSS Elimination:\n",
+      " [[ 1.  0.  0. -4.]\n",
       " [ 0.  1.  0.  0.]\n",
       " [ 0.  0.  1.  8.]]\n"
      ]
@@ -146,7 +147,7 @@
    "source": [
     "#Gauss Eliminieren\n",
     "A1_G = mrref(LGS_KOFF)\n",
-    "print(A1_G)\n",
+    "print('Matrix nach GAUSS Elimination:\\n', A1_G)\n",
     "#Falls bei der Gauss eine Eye Matrix rauskommt gibt es keine Freie Varaiblen sondern alle sind Pivot.\n",
     "# Bei diesem Fall gibt es genau eine Lösung nähmlich die Werte nach dem Gauss. (-4,0,8)"
    ]
@@ -168,8 +169,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "51882d8d-4b05-45fe-b407-051a5eb52e15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In das Array A kommen die Werte von dem LGS. WICHTIG bei den Stellen wo keine Werte sind muss 0 eingesetzt werden\n",
+    "\n",
+    "LGS_KOFF = np.array([[-40,-126,80,0,0,77],\n",
+    "             [12,10,-24,0,77,0],\n",
+    "             [-142,10,-24,77,154,0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0e23114a-debc-4ab9-ad3c-26cca722f651",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix nach GAUSS Elimination:\n",
+      " [[ 1.          0.          0.         -0.5        -0.5         0.        ]\n",
+      " [ 0.          1.          0.          0.         -2.76978417 -0.83093525]\n",
+      " [ 0.          0.          1.         -0.25       -4.61241007 -0.34622302]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Gauss Eliminieren\n",
+    "A1_G = mrref(LGS_KOFF)\n",
+    "print('Matrix nach GAUSS Elimination:\\n', A1_G)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "700512b9-9afc-4c41-bbd2-5452cb241f84",
+   "id": "d3f4d5c6-7a61-415b-998d-12fa917f4abb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Hier sehen wir dass wir Freie und Pivot Variablen haben.\n",
+    "#Pivot: x1, x2, x3 Freie: x4,x5\n",
+    "# Hier kann der Aufpunkt schnell gefunden werden indem x4 und x5 null gesetzt wird.\n",
+    "# Aufpunkt: (0,-0.83093525, -0.34622302, 0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a18b83f3-e473-4788-869d-1b4b76f215fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Koeeffizientenmatrix:\n",
+      " [[ -40 -126   80    0    0]\n",
+      " [  12   10  -24    0   77]\n",
+      " [-142   10  -24   77  154]]\n",
+      "Richtungsvektoren:\n",
+      " [[0.5        0.         0.25       1.         0.        ]\n",
+      " [0.5        2.76978417 4.61241007 0.         1.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Als nächstes müssen die Richtungsvektoren bestummen werden.\n",
+    "\n",
+    "print('Koeeffizientenmatrix:\\n', LGS_KOFF[:,0:-1])\n",
+    "\n",
+    "print('Richtungsvektoren:\\n',mnull(LGS_KOFF[:,0:-1]).T) \n",
+    "#Hier können die Richtungs vektoren entsprechend ausgelesen werden:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f6a81bc9-7d96-4b55-b091-d713f7136cce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " ## Die Lösung wäre: (x1,x2,x3,x4,x5) = (0,-0.83093525, -0.34622302, 0, 0) + \n",
+    "                                    #la* (0.5, 0, 0.25, 1, 0) + \n",
+    "                                    #u* (0.5, 2.76978417, 4.61241007, 0, 1) ##"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e89a71b-23fa-4f0b-8e60-65e667e5c61a",
    "metadata": {},
    "outputs": [],
    "source": []
