--- a/Notebooks/Abstaende.ipynb
+++ b/Notebooks/Abstaende.ipynb
@@ -1,12 +1,152 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9842f31b-5719-4952-bb61-e7eac7c55c63",
+   "metadata": {},
+   "source": [
+    "# Notebook für Abstände #"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1dd5fe2d-4198-43c1-8f52-3a6b93a49888",
+   "execution_count": 2,
+   "id": "c794b9f1-1081-4882-a57f-7088467702c2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Initialisierung\n",
+    "import numpy as np\n",
+    "import sympy as sym\n",
+    "import scipy.linalg as sp\n",
+    "\n",
+    "# eigene Funktionen\n",
+    "def eliminate(Aa_in, tolerance=np.finfo(float).eps*10., fix=False, verbos=0):\n",
+    "    # eliminates first row\n",
+    "    # assumes Aa is np.array, As.shape>(1,1)\n",
+    "    Aa = Aa_in\n",
+    "    Nn = len(Aa)\n",
+    "    # Mm = len(Aa[0,:])\n",
+    "    if (Nn < 2):\n",
+    "        return Aa\n",
+    "    else:\n",
+    "        if not fix:\n",
+    "            prof = np.argsort(np.abs(Aa_in[:, 0]))\n",
+    "            Aa = Aa[prof[::-1]]\n",
+    "        if np.abs(Aa[0, 0]) > tolerance:\n",
+    "            el = np.eye(Nn)\n",
+    "            el[0:Nn, 0] = -Aa[:, 0] / Aa[0, 0]\n",
+    "            el[0, 0] = 1.0 / Aa[0, 0]\n",
+    "            if (verbos > 50):\n",
+    "                print('Aa \\n', Aa)\n",
+    "                print('el \\n', el)\n",
+    "                print('pr \\n', np.matmul(el, Aa))\n",
+    "            return np.matmul(el, Aa)\n",
+    "        else:\n",
+    "            return Aa\n",
+    "\n",
+    "\n",
+    "def FirstNonZero(lis):\n",
+    "    return next((i for i, x in enumerate(lis) if x), len(lis)-1)\n",
+    "\n",
+    "\n",
+    "def SortRows(Aa):\n",
+    "    inx = np.array(list(map(FirstNonZero, Aa)))\n",
+    "    #print('inx: ',inx,inx.argsort())\n",
+    "    return Aa[inx.argsort()]\n",
+    "\n",
+    "\n",
+    "def mrref(Aa_in, verbos=0):\n",
+    "    Aa = Aa_in*1.0\n",
+    "    Nn = len(Aa)\n",
+    "    kklist = np.arange(0, Nn - 1)\n",
+    "    #print('kklist', kklist)\n",
+    "    for kk in kklist:\n",
+    "        Aa[kk:, kk:] = eliminate(Aa[kk:, kk:], verbos=verbos-1)\n",
+    "    Aa = SortRows(Aa)\n",
+    "    Aa = np.flipud(Aa)\n",
+    "    # for kk in kklist:\n",
+    "    for kkh in kklist:\n",
+    "        kk = FirstNonZero(Aa[kkh, :])\n",
+    "        Aa[kkh::, kk::] = eliminate(Aa[kkh::, kk::], fix=True, verbos=verbos-1)\n",
+    "    return np.flipud(Aa)\n",
+    "\n",
+    "\n",
+    "def mnull(Aa_in,leps=np.finfo(float).eps*10,verbos=0):\n",
+    "    Aa=mrref(Aa_in) \n",
+    "    Aa=Aa[list(map(np.linalg.norm,Aa  ))>leps] # extract non-zero linies\n",
+    "    mpiv=np.array(Aa[0]*0,dtype=bool)\n",
+    "    jj=0 # setup mask, indicating pivot-variables\n",
+    "    for ro in Aa>leps:\n",
+    "        for x in ro[jj:]:\n",
+    "            if x:\n",
+    "                mpiv[jj]=True\n",
+    "                jj=jj+1\n",
+    "                break\n",
+    "    \n",
+    "    jj=0 ; la=Aa[:,mpiv] ; veo=[]\n",
+    "    for jj in  np.argwhere(mpiv==False): \n",
+    "        ve=np.linalg.lstsq(la, -Aa[:,jj],rcond=None)[0]\n",
+    "        vel=np.zeros((len(mpiv)))\n",
+    "        vel[mpiv]=ve[:,0] ; vel[jj]=1\n",
+    "        veo.append(vel)\n",
+    " \n",
+    "    opt=np.array(veo).T\n",
+    "    if (verbos>10):\n",
+    "        print(Aa.shape,opt.shape)\n",
+    "        print('Test: ',np.matmul(Aa,opt))\n",
+    "    return opt\n",
+    "\n",
+    "def SpiegProj(A,Pp,vv,verbos=0):\n",
+    "    # in:\n",
+    "    #  A Punkt zu spieglen\n",
+    "    #  P Aufpunkt der Geraden\n",
+    "    #  vv Richtungsvektor der Geraden\n",
+    "    kk=A-Pp\n",
+    "    nn=[[0,-1],[1,0]] @ vv\n",
+    "    hh=( kk@nn)/(nn@nn)*nn\n",
+    "    if verbos>0:\n",
+    "        print('hh',hh)\n",
+    "    As=A-hh\n",
+    "    Ass=A-2*hh\n",
+    "    if verbos>0:\n",
+    "        print('A\\'',As,'A\\'\\'',Ass)\n",
+    "    return [As,Ass]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55540060-3bc2-442b-8e4c-6f56181d4fa0",
+   "metadata": {},
+   "source": [
+    "## Spiegelung [#109810]\n",
+    "\n",
+    "Projekzieren Sie das das Dreieck A, B, C auf die Gerade g. Spiegeln Sie dann das Dreieck an g. \n",
+    "\n",
+    "$\\vec{A} = (0,0), \\; \\vec{B} = (3,-1),\\; \\vec{C} = (2,6)$ und g: $\\vec{x} = $(7, -2) + k*(2,2)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "340460ff-3487-41fa-8022-759bb1a7092a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Die Kordinaten in einzelne Arrays schreiben\n",
+    "A = np.array([0.0, 0.0])\n",
+    "B = np.array([3.0, -1.0])\n",
+    "C = np.array([2.0, 6.0])\n",
+    "\n",
+    "# Den Aufpunkt und den Verbindungsvektor in Array schreiben\n",
+    "Pp = np.array([7.0, -2.0])\n",
+    "vv = np.array([2.0, 2.0])\n",
+    "\n",
+    "\n",
+    "print(SpiegProj(A,Pp,vv))\n",
+    "print(SpiegProj(B,Pp,vv))\n",
+    "print(SpiegProj(C,Pp,vv))"
+   ]
   }
  ],
  "metadata": {
