--- a/Notebooks/Abstaende.ipynb
+++ b/Notebooks/Abstaende.ipynb
@@ -128,8 +128,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "340460ff-3487-41fa-8022-759bb1a7092a",
+   "execution_count": 20,
+   "id": "fb439c70-9516-4b0e-af6f-e907807659e2",
    "metadata": {},
    "outputs": [
     {
@@ -158,6 +158,28 @@
     "print(SpiegProj(C,Pp,vv))\n",
     "# Der Wert vom ersten Array ist die Projektion vom Punkt auf die Gerade\n",
     "# Das Zwewite Array zeigt jeweils den gespiegelten Punkt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2f0d485b-1f33-4b5a-8009-dd1c148cf2e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([6., 8.]), array([3.6, 9.8])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "P = np.array([8.4, 6.2])\n",
+    "Pp = np.array([0, 0])\n",
+    "vv = np.array([3, 4])\n",
+    "\n",
+    "print(SpiegProj(P,Pp,vv))"
    ]
   },
   {
