--- a/Notebooks/Abstaende.ipynb
+++ b/Notebooks/Abstaende.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "id": "c794b9f1-1081-4882-a57f-7088467702c2",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
     "    n = np.linalg.cross(U,V)\n",
     "    print(n)\n",
     "    d = (ap@n)/(np.linalg.norm(n))\n",
-    "    return d"
+    "    return np.linalg.norm(d)\n"
    ]
   },
   {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "id": "844fd8f2-10f3-435e-a9b2-e66a5d2b9126",
    "metadata": {},
    "outputs": [
@@ -240,8 +240,20 @@
      "output_type": "stream",
      "text": [
       "[-40   0  42]\n",
+      "[-400    0  420]\n",
+      "[-40   0  42]\n",
       "[-400    0  420]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(58.0)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -290,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "id": "1e39fa11-769d-4aef-8061-00b2217c21c5",
    "metadata": {},
    "outputs": [
@@ -305,10 +317,10 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(-205.0)"
+       "np.float64(205.0)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
