--- a/Notebooks/Matrizen_Operationen.ipynb
+++ b/Notebooks/Matrizen_Operationen.ipynb
@@ -5,7 +5,7 @@
    "id": "f8153725-d65d-405b-9d74-395f0cbca2eb",
    "metadata": {},
    "source": [
-    "# Matrixalgebra #"
+    "# Matrizen_Operationen #"
    ]
   },
   {
