--- a/Notebooks/Matrizen_Operationen.ipynb
+++ b/Notebooks/Matrizen_Operationen.ipynb
@@ -345,7 +345,8 @@
    "id": "60f92474-0f6d-4d09-abbc-8632a66e6989",
    "metadata": {},
    "source": [
-    "# Matrizen Rechnungen #"
+    "# Matrizen Rechnungen: #\n",
+    "## Sammlung der wichtigen Befehle\n"
    ]
   },
   {
@@ -354,7 +355,21 @@
    "id": "2e9bca32-70b9-4c58-bdea-ea3f0ef65ce1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#np.cross(u,v) # Vektorprodukt\n",
+    "#nn @ P0 # Skalarprodukt, Matrix-Produkt\n",
+    "#np.linalg.norm(nn) # Norm\n",
+    "#sym.simplify() # einen symbolischen Ausdruck vereinfachen\n",
+    "\n",
+    "#mrref(Aa ) # Gauss-Elimination\n",
+    "#mnull(Aa ) # Nullraum (Richtungsvektoren) bestimmen\n",
+    "\n",
+    "#np.hstack # Matrizen zusammenfügen\n",
+    "#np.eye(3) # Einheitsmatrix\n",
+    "\n",
+    "#np.array() # eine Matrix erzeugen\n",
+    "#[np.cos(phi_a_rad) ,np.sin(phi_a_rad)]  # sin(), cos()"
+   ]
   }
  ],
  "metadata": {
