--- a/Notebooks/Matrizen_Operationen.ipynb
+++ b/Notebooks/Matrizen_Operationen.ipynb
@@ -108,7 +108,7 @@
    "id": "611fa4bd-c71c-45bf-ad4b-3a61d0eb5917",
    "metadata": {},
    "source": [
-    "# Lösung Überprüfen #\n",
+    "# Lösungen Überprüfen #\n",
     "\n",
     "## Beispiel  ##\n",
     "![image.png](attachment:ae026ede-1cce-4914-b6fe-192f0ba89078.png)"
