fixed some grammar

--- a/Notebooks/Matrizen_Operationen.ipynb
+++ b/Notebooks/Matrizen_Operationen.ipynb
@@ -125,7 +125,7 @@
     "LGS_KOFF = np.array([[4,4,-16],\n",
     "                    [1,0,-4],\n",
     "                    [5,2,-20]])\n",
-    "# Die Partikuläre Vekotr erstellen (Die Lösungen für die einzelnen Gleichungen)\n",
+    "# Den Partikulären Vektor erstellen (Die Lösungen für die einzelnen Gleichungen)\n",
     "LGS_PART = np.array([4,2,8])\n",
     "\n",
     "# Die zu testenden Vektoren erstellen:\n",
@@ -173,7 +173,7 @@
     "print('Lösung für den Vektor v:\\n', LGS_KOFF @ v)\n",
     "print('Lösung für den Vektor w:\\n', LGS_KOFF @ w)\n",
     "\n",
-    "#Falls der Gleiche Vektor rauskommt wie die Lösungen vom LGS dann ist es eine Partikuläre Lösung\n",
+    "#Falls der gleiche Vektor rauskommt wie die Lösungen vom LGS dann ist es eine Partikuläre Lösung\n",
     "#Falls der 0 Vektor rauskommt haben wir eine Homogene Lösung gefunden\n",
     "#Bei allen anderen Vektoren als Resultat bedeutet dies dass der Vektor keine Lösung ist vom LGS"
    ]
