--- a/Notebooks/LGS_Lösen.ipynb
+++ b/Notebooks/LGS_Lösen.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "69995bc4-b0fe-4577-9772-ba0377c6ad35",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "0af14f1a-bbec-4ea6-a110-d499fdee4726",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "078800c5-1c1c-4cd2-9e31-597111fab312",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
     "A1_G = mrref(LGS_KOFF)\n",
     "print('Matrix nach GAUSS Elimination:\\n', A1_G)\n",
     "#Falls bei der Gauss eine Eye Matrix rauskommt gibt es keine Freie Varaiblen sondern alle sind Pivot.\n",
-    "# Bei diesem Fall gibt es genau eine Lösung nähmlich die Werte nach dem Gauss. (-4,0,8)"
+    "# Bei diesem Fall gibt es genau eine Lösung nämlich die Werte nach dem Gauss. (-4,0,8)"
    ]
   },
   {
