--- a/Notebooks/RLC-Netzwerke.ipynb
+++ b/Notebooks/RLC-Netzwerke.ipynb
@@ -99,9 +99,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3357e731-a7ba-42c7-a7f8-2b400eab7468",
+   "metadata": {},
+   "source": [
+    "# Gesamtimpedanzen #"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "274f4e7b-71d2-4ec5-8bb7-26fa7bc06802",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ww = 2*np.pi/6\n",
+    "Ll = 0.5\n",
+    "Cc = 0.8\n",
+    "\n",
+    "#el =-1/(ww*0.8)+ww*0.5\n",
+    "\n",
+    "Zl = np.array([[0, ww*Ll], [-ww*Ll, 0]])\n",
+    "\n",
+    "Zc = np.array([[0,1/(ww*Cc)],[1/(ww*Cc), 0]])\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b8475a5-7a9c-415a-be58-85de7a719ba7",
+   "id": "f6848a13-e122-4883-a04b-13f7afbe1ac9",
    "metadata": {},
    "outputs": [],
    "source": []
