added some comments

--- a/Notebooks/RLC-Netzwerke.ipynb
+++ b/Notebooks/RLC-Netzwerke.ipynb
@@ -130,28 +130,28 @@
     }
    ],
    "source": [
-    "#Zt ausrechnen\n",
     "\n",
+    "# Werte von der Aufgabe hinzufügen\n",
     "ww = (2*np.pi)/6\n",
     "Ll = 0.5\n",
     "Cc = 0.8\n",
-    "\n",
     "u = np.array([[6], [0]])\n",
     "\n",
     "#el =-1/(ww*0.8)+ww*0.5\n",
     "\n",
+    "#Zl erstellen\n",
     "Zl = np.array([[0, ww*Ll], [-ww*Ll, 0]])\n",
     "\n",
-    "\n",
+    "#Zc erstellen\n",
     "Zc = np.array([[0,-1/(ww*Cc)],[1/(ww*Cc), 0]])\n",
-    "\n",
+    "# Zt ausrechnen\n",
     "Zt = Zl + Zc\n",
     "print(\"Gesammtimpedanz:\\n\", Zt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "f6848a13-e122-4883-a04b-13f7afbe1ac9",
    "metadata": {},
    "outputs": [
@@ -159,14 +159,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.        ]\n",
-      " [4.02037979]]\n"
+      "[[ 0.        ]\n",
+      " [-8.95437792]]\n"
      ]
     }
    ],
    "source": [
     "# Lösungen ausrechnen.\n",
-    "\n",
+    "# Hier muss die Inverse von dem Impedanz Matrix benutzt werden.\n",
     "A = np.linalg.inv(Zt)@u\n",
     "print(A)"
    ]
