--- a/Notebooks/RLC-Netzwerke.ipynb
+++ b/Notebooks/RLC-Netzwerke.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "f6848a13-e122-4883-a04b-13f7afbe1ac9",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.        ]\n",
+      "Stromvektor:\n",
+      " [[ 0.        ]\n",
       " [-8.95437792]]\n"
      ]
     }
@@ -168,7 +169,7 @@
     "# Lösungen ausrechnen.\n",
     "# Hier muss die Inverse von dem Impedanz Matrix benutzt werden.\n",
     "A = np.linalg.inv(Zt)@u\n",
-    "print(A)"
+    "print(\"Stromvektor:\\n\", A)"
    ]
   },
   {
