--- a/Notebooks/RLC-Netzwerke.ipynb
+++ b/Notebooks/RLC-Netzwerke.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "f6848a13-e122-4883-a04b-13f7afbe1ac9",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
    ],
    "source": [
     "# Lösungen ausrechnen.\n",
-    "# Hier muss die Inverse von dem Impedanz Matrix benutzt werden.\n",
+    "# Hier muss die Inverse von dem Impedanz Matrix benutzt werden. U = Ztot @ i Umgeformt nach i => Ztot^-1 @ u = i\n",
     "A = np.linalg.inv(Zt)@u\n",
     "print(\"Stromvektor:\\n\", A)"
    ]
