--- a/Notebooks/RLC-Netzwerke.ipynb
+++ b/Notebooks/RLC-Netzwerke.ipynb
@@ -149,8 +149,11 @@
     "\n",
     "#Zc erstellen\n",
     "Zc = np.array([[0,-1/(ww*Cc)],[1/(ww*Cc), 0]])\n",
-    "# Zt ausrechnen\n",
+    "\n",
+    "#Zt ausrechnen\n",
     "Zt = Zl + Zc\n",
+    "\n",
+    "#Ausgabe von der Gesammtimpedanz\n",
     "print(\"Gesammtimpedanz:\\n\", Zt)"
    ]
   },
