--- a/Notebooks/RLC-Netzwerke.ipynb
+++ b/Notebooks/RLC-Netzwerke.ipynb
@@ -111,7 +111,7 @@
    "id": "3357e731-a7ba-42c7-a7f8-2b400eab7468",
    "metadata": {},
    "source": [
-    "# Gesamtimpedanzen #\n",
+    "# Beispiel 14.7 CL Schaltkreis #\n",
     "\n",
     "![image.png](attachment:8a8a7a84-716b-49ce-8a82-eab56b451a7e.png)\n",
     "\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "274f4e7b-71d2-4ec5-8bb7-26fa7bc06802",
    "metadata": {},
    "outputs": [
