--- a/Notebooks/RLC-Netzwerke.ipynb
+++ b/Notebooks/RLC-Netzwerke.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "274f4e7b-71d2-4ec5-8bb7-26fa7bc06802",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "f6848a13-e122-4883-a04b-13f7afbe1ac9",
    "metadata": {},
    "outputs": [
@@ -180,12 +180,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e25c491-a7a5-440e-a8ae-d7495dbb9834",
+   "cell_type": "markdown",
+   "id": "0ef2558a-0736-4f32-8579-f351a159541c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Beispiel 14.8 c #\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
