--- a/Notebooks/RLC-Netzwerke.ipynb
+++ b/Notebooks/RLC-Netzwerke.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "be40e919-aaba-4b9d-bf3b-ff00e3ae6dc0",
    "metadata": {},
    "outputs": [
@@ -210,8 +210,8 @@
      "output_type": "stream",
      "text": [
       "Gesammtimpedanz:\n",
-      " [[ 0.        -0.6700633]\n",
-      " [ 0.6700633  0.       ]]\n"
+      " [[ 0.5         5.02654825]\n",
+      " [-5.02654825  0.5       ]]\n"
      ]
     }
    ],
@@ -228,7 +228,7 @@
     "Zl = np.array([[0, ww*Ll], [-ww*Ll, 0]])\n",
     "\n",
     "#Zc erstellen\n",
-    "Zr = np.array([[R, 0],[0,R]])\n",
+    "Zr = np.array([[R, 0],[0, R]])\n",
     "\n",
     "#Zt ausrechnen\n",
     "Zt = Zl + Zr\n",
@@ -239,8 +239,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "87c18c6c-cb6b-439f-bbfa-97f1b6a3070e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stromvektor:\n",
+      " [[0.23514485]\n",
+      " [2.36393386]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lösungen ausrechnen.\n",
+    "# Hier muss die Inverse von dem Impedanz Matrix benutzt werden. U = Ztot @ i Umgeformt nach i => Ztot^-1 @ u = i\n",
+    "A = np.linalg.inv(Zt)@u\n",
+    "print(\"Stromvektor:\\n\", A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "088adbdf-b6d5-4869-b6f6-2ca15e00f797",
    "metadata": {},
    "outputs": [],
    "source": []
