added functions for impedance

--- a/Notebooks/RLC-Netzwerke.ipynb
+++ b/Notebooks/RLC-Netzwerke.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "602420d1-08e4-40d6-82e0-b098e7b1a071",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,17 @@
     "    if (verbos>10):\n",
     "        print(Aa.shape,opt.shape)\n",
     "        print('Test: ',np.matmul(Aa,opt))\n",
-    "    return opt"
+    "    return opt\n",
+    "\n",
+    "\n",
+    "def Zl(Ll,ww=0):\n",
+    "    return np.array([[0,ww *Ll],[-ww*Ll,0]])\n",
+    "\n",
+    "def Zc(Cc,ww=1):\n",
+    "    return np.array([[0,-1/(ww*Cc)],[1/(ww*Cc),0]])\n",
+    "\n",
+    "def Zr(Rr,ww=0):\n",
+    "    return np.eye(2)*Rr "
    ]
   },
   {
@@ -120,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "274f4e7b-71d2-4ec5-8bb7-26fa7bc06802",
    "metadata": {},
    "outputs": [
