--- a/Notebooks/RLC-Netzwerke.ipynb
+++ b/Notebooks/RLC-Netzwerke.ipynb
@@ -154,13 +154,13 @@
     "#el =-1/(ww*0.8)+ww*0.5\n",
     "\n",
     "#Zl erstellen\n",
-    "Zl = np.array([[0, ww*Ll], [-ww*Ll, 0]])\n",
+    "ZL = Zl(Ll, ww)\n",
     "\n",
     "#Zc erstellen\n",
-    "Zc = np.array([[0,-1/(ww*Cc)],[1/(ww*Cc), 0]])\n",
+    "ZC = Zc(Cc, ww)\n",
     "\n",
     "#Zt ausrechnen\n",
-    "Zt = Zl + Zc\n",
+    "Zt = ZL + ZC\n",
     "\n",
     "#Ausgabe von der Gesammtimpedanz\n",
     "print(\"Gesammtimpedanz:\\n\", Zt)"
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "f6848a13-e122-4883-a04b-13f7afbe1ac9",
    "metadata": {},
    "outputs": [
@@ -242,6 +242,46 @@
     "\n",
     "#Zt ausrechnen\n",
     "Zt = Zl + Zr\n",
+    "\n",
+    "#Ausgabe von der Gesammtimpedanz\n",
+    "print(\"Gesammtimpedanz:\\n\", Zt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "327f3bd6-888f-4c13-80bf-9478493dbc9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.ndarray' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 10\u001b[0m\n\u001b[0;32m      5\u001b[0m u \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([[\u001b[38;5;241m12\u001b[39m], [\u001b[38;5;241m0\u001b[39m]])\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m#el =-1/(ww*0.8)+ww*0.5\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m#Zl erstellen\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m ZL \u001b[38;5;241m=\u001b[39m \u001b[43mZl\u001b[49m\u001b[43m(\u001b[49m\u001b[43mLl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mww\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m#Zc erstellen\u001b[39;00m\n\u001b[0;32m     13\u001b[0m ZR \u001b[38;5;241m=\u001b[39m Zr(R,ww)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "# Werte von der Aufgabe hinzufügen\n",
+    "ww = (2*np.pi)*10\n",
+    "Ll = 0.08\n",
+    "R = 0.5\n",
+    "u = np.array([[12], [0]])\n",
+    "\n",
+    "#el =-1/(ww*0.8)+ww*0.5\n",
+    "\n",
+    "#Zl erstellen\n",
+    "ZL = Zl(Ll, ww)\n",
+    "\n",
+    "#Zc erstellen\n",
+    "ZR = Zr(R,ww)\n",
+    "\n",
+    "#Zt ausrechnen\n",
+    "Zt = ZL + ZR\n",
     "\n",
     "#Ausgabe von der Gesammtimpedanz\n",
     "print(\"Gesammtimpedanz:\\n\", Zt)"
