--- a/Notebooks/Abstaende.ipynb
+++ b/Notebooks/Abstaende.ipynb
@@ -369,12 +369,13 @@
    "id": "44278b23-794b-410e-9ab7-14234f32750e",
    "metadata": {},
    "source": [
+    "# Schnittpunkt zwischen Ebenen\n",
     "![image.png](attachment:42e20a8c-e528-4770-b807-0bfb9510b081.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "dd80ed67-0c0f-425c-957c-98bf8cf3216f",
    "metadata": {},
    "outputs": [
@@ -388,22 +389,25 @@
     }
    ],
    "source": [
-    "# Parameter\n",
+    "# Parameter erstellen\n",
     "s, t = sym.symbols('s t')\n",
-    " \n",
+    "\n",
+    "# Die Ebenegleichung mit Parameter erstellen für g\n",
     "# Gerade g\n",
     "g = sym.Matrix([-40 + 6*s, 2*s, 6])\n",
     "\n",
+    "# Die Ebenegleichung mit Parameter erstellen für H\n",
     "# Gerade h\n",
     "h = sym.Matrix([-4, 15 + 3*t, -6*t])\n",
     "\n",
+    "#Die Funktion intersection aufrufen mit g und h als Parameter\n",
     "intersection(g, h)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9f243bc-bcde-491b-8133-35fbfa7140d0",
+   "id": "8cec0f67-1af1-4285-ba6b-c418dbaa53ee",
    "metadata": {},
    "outputs": [],
    "source": []
