fixed grammar error

--- a/Notebooks/Lineare_Abbildung.ipynb
+++ b/Notebooks/Lineare_Abbildung.ipynb
@@ -172,7 +172,7 @@
    ],
    "source": [
     "#Additivität:\n",
-    "#Das Resulat [0,0] bedeutet, dass die Abbildung Additivität aufweis\n",
+    "#Das Resulat [0,0] bedeutet, dass die Abbildung Additivität aufweist\n",
     "print(sym.simplify(lf(x,y,z)+lf(u,v,w)- lf(x+u, y+v ,z+w)))"
    ]
   },
@@ -258,7 +258,7 @@
    ],
    "source": [
     "#Additivität:\n",
-    "#Das Resulat [0,0] bedeutet, dass die Abbildung Additivität aufweis\n",
+    "#Das Resulat [0,0] bedeutet, dass die Abbildung Additivität aufweist\n",
     "print(sym.simplify(lf(x,y,z)+lf(u,v,w)- lf(x+u, y+v ,z+w)))"
    ]
   },
